# Tetris

./: .gitignore  Makefile  README.md  main.cpp  tetris
tetris-ai/: CMakeLists.txt  best.ai  main.cpp  tetris_ai
tetris-opengl/: main.cpp  tetris  tetris_ai
tetris-opengl/include/glad/: glad.h
tetris-opengl/src/: glad.c
tetris-terminal/: Makefile  main.cpp  tetris
